--- a/index.html
+++ b/index.html
@@ -305,6 +305,28 @@
     </div>
         <!-- /.container END-->
 
+        <!-- Ephemera start -->
+        <div id="ephemera">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-sm-6">
+                        <div id="ephemera-text-wrap">
+                        <h3 class="text-center">EPHEMERA</h3>
+                        <p>"Ephemera focuses on a single image of curiosity from across the history of NCBS, TIFR and their communities."<br />See the caption below for more details. Each refresh results in a new image.</p>
+                    </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div id="ephemera-img-container">
+                            <img src="https://www.ncbs.res.in/ncbs25/sandbox/ephemera/img/Ephemera/TIFR-Post-Lunch-Walk.jpg" style="width: 100%;">
+                            <div class="captionEphImg col-md-12">The TIFR Wind Tunnel: Every day after lunch, the windy corridor between the Homi Bhabha Auditorium and the main academic block is the place where people walk back and forth to burn off their lunch, perhaps very different from the architects' vision when they designed the building. </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Ephemera END -->
+
     <!-- Acknowledgements start --> 
     <div class="ack-section" >
        <div class="container" >
@@ -370,7 +392,7 @@
         interval: 5000 //changes the speed
     })
     </script>
-    <!-- copyright update year dynamically -->
+    <!-- copyright update year dynamically: \u00A9 is unicode for symbol -->
     <script>
         $("#copyright a").html(document.createTextNode("copyright \u00A9 "+new Date().getFullYear()));
     </script>
