--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 
 <head>
 
@@ -12,10 +12,10 @@
 
     <title>NCBS@25</title>
 	
-    <meta property="og:title" content="NCBS@25"/>
+    <meta property="og:title" content="NCBS@25 - Thirteen ways of looking at NCBS"/>
     <meta property="og:image" content="https://www.ncbs.res.in/ncbs25/img/Assets/ncbs_logo_introtext.png"/>
     <meta property="og:url" content="https://www.ncbs.res.in/ncbs25/"/>
-    <meta property="og:site_name" content="NCBS@25 - Thirteen ways of looking at NCBS"/>
+    <meta property="og:site_name" content="NCBS@25"/>
     <meta property="og:description" content="The National Centre for Biological Sciences (NCBS) completes 25 years this year. The NCBS@25 exhibit is built around thirteen ways to reflect upon the history of the institution."/>
         
 	<!-- favicon-->
