--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="title" content="NCBS@25 - Thirteen ways of looking at NCBS">
     <meta name="description" content="The National Centre for Biological Sciences (NCBS) completes 25 years this year. The NCBS@25 exhibit is built around thirteen ways to reflect upon the history of the institution.">
     <meta name="author" content="Venkat Srinivasan">
+     <meta name="image" content="https://www.ncbs.res.in/ncbs25/img/Assets/ncbs_logo_introtext.png">
 
     <title>NCBS@25</title>
 	
